syntax = "proto3";

option csharp_namespace = "CRMService.Services";
package crm;

service CRM {
  rpc GetAllServices(EmptyRequest) returns (ServiceList) {}
  rpc AddApplication(AddApplicationRequest) returns (ApplicationResponse) {}
  rpc GetAllApplications(EmptyRequest) returns (ApplicationList) {}
  rpc GetAllTechnicalSupportCalls(EmptyRequest) returns (TechnicalSupportCallList) {}
}

message EmptyRequest {}

message ServiceList {
  repeated Service services = 1;
}
message AddApplicationRequest {
  string abonentNumber = 1;
  string personalAccount = 2;
  AddServiceRequest service = 3;
  string equipmentType = 4;
  AddTechnicalSupportCallRequest technicalSupportCall = 5;
  int64 closeDate = 6;
}
message AddServiceRequest {
  string serviceName = 1;
  string abonentNumber = 2;
  string serviceType = 3;
  string serviceView = 4;
  string status = 5;
}
message AddTechnicalSupportCallRequest {
  string problemType = 1;
  string problemDescription = 2;
  string abonentNumber = 3;
}
message Application {
  string applicationNumber = 1;
  int64 beginDate = 2;
  string abonentNumber = 3;
  string personalAccount = 4;
  Service service = 5;
  string equipmentType = 6;
  TechnicalSupportCall technicalSupportCall = 7;
  int64 closeDate = 8;
}
message Service {
  int64 serviceId = 1;
  string serviceName = 2;
  int64 connectionDate = 3;
  string abonentNumber = 4;
  string serviceType = 5;
  string serviceView = 6;
  string status = 7;
}
message TechnicalSupportCall {
  int64 technicalSupportCallID = 1;
  int64 callDate = 2;
  string problemType = 3;
  string problemDescription = 4;
  string abonentNumber = 5;
}
message ApplicationList {
  repeated Application applications = 1;
}
message TechnicalSupportCallList {
  repeated TechnicalSupportCall technicalSupportCalls = 1;
}
message ApplicationResponse {
  bool success = 1;
  string error = 2;
}